--- a/index.html
+++ b/index.html
@@ -143,16 +143,16 @@
         <div class="items">
           <div class="item">
             <p>Get Quotes</p>
-            <code>http://quotemanga.vercel.com/api/v1/quotes</code>
+            <code>https://quotemanga.vercel.app/api/v1/quotes</code>
           </div>
           <div class="item">
             <p>Get Random Quote</p>
-            <code>http://quotemanga.vercel.com/api/v1/quotes/random</code>
+            <code>https://quotemanga.vercel.app/api/v1/quotes/random</code>
           </div>
           <div class="item">
             <p>Get Quotes With Limit</p>
             <code
-              >http://quotemanga.vercel.com/api/v1/quotes?limit=10&page=1</code
+              >https://quotemanga.vercel.app/api/v1/quotes?limit=10&page=1</code
             >
           </div>
         </div>
