--- a/index.html
+++ b/index.html
@@ -150,10 +150,8 @@
             <code>https://quotemanga.vercel.app/api/v1/quotes/random/1</code>
           </div>
           <div class="item">
-            <p>Get Quotes With Limit</p>
-            <code
-              >https://quotemanga.vercel.app/api/v1/quotes?limit=10&page=1</code
-            >
+            <p>Next page quotes</p>
+            <code>https://quotemanga.vercel.app/api/v1/quotes?page=2</code>
           </div>
         </div>
       </div>
